Fix compilation visuals and debug overlay overflow

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -414,6 +414,10 @@ label {
   /* Full 360-degree rotation */
 }
 
+.splitpanes [style*="display: none"]~.splitpanes__splitter {
+  display: none;
+}
+
 /* Narrow screen */
 @media screen and (max-width: 450px) {
   .dropdown-select {
